# generate_panel

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pylint.yml
src/: __init__.py  generate_panel.py  generate_panels.py
src/extendLib/: extArgparse.py
src/generate_panels/: generate_panels.py
tests/: test_generate_panels.py
